--- a/index.html
+++ b/index.html
@@ -5,20 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="styles/style.css" />
-    <title>Race Car</title>
+    <title>Kiki Catch Game</title>
   </head>
   <body>
-    <div class="game-intro">
-      <img src="./images/logo.png" alt="" class="logo-img" />
-      <br />
-      <button id="start-button">StartGame</button>
-      <p>Use the left and right arrow to control the car!</p>
-      <img src="./images/arrows.png" alt="" class="arrows-img" />
-    </div>
+  <div class="nav">
+    <img src="./images/logo.png" alt="" class="logo-img" />
+    <h1>Kiki Catch Game</h1>
+    <img src="./images/logo.png" alt="" class="logo-img" />
+  </div>
 
-    <div id="game-board">
-      <canvas id="canvas" width="500" height="700"></canvas>
-    </div>
+  <div class="instruction">
+    <h2>Instruction</h2>
+    <ul >
+      <li>Use the left and the right button to move the girl from being hit by the ball.</li>
+      <li>Missing the ball earns you 5 point</li>
+      <li>You have 3 Lives left</li>
+      <p> All the Best</p>
+    </ul>
+  </div>
+
+  <div id="game-status"> 
+    <hi>Lives: <span id="lives">3</span></hi>
+    <hi>Score: <span id="score">0</span></hi>
+  </div>
+  <div id="game-board">
+    <canvas id="canvas" width="auto" height="500"></canvas>
+  </div>
+
+  <div class="game-intro">
+    <button id="start-button">Start Game</button>
+    <button id="restart-button" disabled>Restart Game </button>
+    <button id="end-button" disabled>End Game</button>
+  </div>
+    
 
     <script type="text/javascript" src="js/index.js"></script>
   </body>
